argocd/projects/echo/apps/echo/base/default.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.oraclecloud.com/backend-tls-enabled: "false"
    oci-native-ingress.oraclecloud.com/healthcheck-protocol: "HTTP"
    oci-native-ingress.oraclecloud.com/healthcheck-path: "/"
spec:
  defaultBackend:
    service:
      name: echo
      port:
        number: 8000
