argocd/projects/echo/apps/echo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo2
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.oraclecloud.com/backend-tls-enabled: "false"
    oci-native-ingress.oraclecloud.com/healthcheck-protocol: "HTTP"
    oci-native-ingress.oraclecloud.com/healthcheck-path: "/"
spec:
  tls:
    - hosts:
        - echo.zem.org.uk
      secretName: ingress-echo-tls
  rules:
    - host: "echo.zem.org.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 8000
